--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -411,7 +411,7 @@ jobs:
             else
               exit 1
             fi
-      # Here's where you will add some code to rollback on failure 
+      # Here's where you will add some code to rollback on failures
       - destroy-environment
       - revert-migrations 
 
