--- a/.circleci/files/cloudfront.yml
+++ b/.circleci/files/cloudfront.yml
@@ -22,7 +22,8 @@ Resources:
       DistributionConfig:
         Origins:
           #if cloudfront still redirects to s3 try to add domain name with its url which includes -website and region
-          - DomainName: !Sub "udapeople-${WorkflowID}.s3.amazonaws.com"
+          # - DomainName: !Sub "udapeople-${WorkflowID}.s3.amazonaws.com"
+          - DomainName: !Sub "udapeople-${WorkflowID}.s3-website-${AWS_DEFAULT_REGION}.amazonaws.com"
             Id: webpage
             S3OriginConfig:
               OriginAccessIdentity: !Sub "origin-access-identity/cloudfront/${CloudFrontOriginAccessIdentity}"
